--- a/public/style.css
+++ b/public/style.css
@@ -1,35 +1,37 @@
 body{
+  height: 100vh;
+  padding: 0;
+  margin: 0;
   background-color: #cdcdcd;
-  width: 50%;
-  margin: 0 auto;
   text-align: center;
   font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 }
 .navbar{
+  float:left;
   margin: 0 auto;
-  background-color: #ff9900;
-  border-radius: 0px 0px 10px 10px;
-  border: 3px solid #303fc8;
+  background-color: #9e9e9e;
+  border-radius: 0px 0px 10px 0px;
+  border: 2px solid #3d3d3d;
   border-top: 0;
-  width: 250px;
-  padding: 2%;
+  border-left: 0;
+  width: 50px;
+  padding: 18px;
+  padding-top: 12px;
+  position: fixed;
   overflow: hidden;
 }
 .navbar a{
-  padding: 3%;
   text-decoration: none;
   color: #303fc8;
-  border-right: 3px solid #303fc8;
+  border-bottom: 3px solid #ed8518;
 }
 .navbar a:hover{
   border-radius: 5%;
   background: radial-gradient(rgba(153, 153, 153, 0.5), rgba(153, 153, 153, 0));
 }
-.navbar a:last-child{
-  border-right: 0
-}
 .content hr{
   width: 20%;
+  margin-left: 0;
 }
 .yieldedcontent{
   background-color: #9e9e9e;
@@ -39,9 +41,17 @@ body{
   padding-top: 2%;
   border-radius: 50px 0px 50px 0px;
   box-shadow: 5px 5px 8px #717171;
+  border: 2px solid #3d3d3d;
+}
+.yieldedcontent h3{
+  color: #ed8518;
 }
 .yieldedcontent a{
+  color: #303fc8;
   text-shadow: 0px 0px black;
+}
+.yieldedcontent a:visited{
+  color: #303fc8;
 }
 .form{
   text-align: left;
@@ -49,6 +59,13 @@ body{
 img{
   margin: 0 auto;
 }
+.content{
+  text-align: left;
+}
 .contentbody{
   text-align: left;
+}
+.contentwrapper{
+  width: 50%;
+  margin: 0 auto;
 }
