--- a/views/guitars/show.erb
+++ b/views/guitars/show.erb
@@ -7,5 +7,5 @@
 <a href="/guitars">&lt;&lt;Back</a>
 <h1><%= @guitar.name %></h1>
 <img src="<%=@guitar.img%>"></img>
-<p>£<%= @guitar.price %></p>
+<p>~£<%= @guitar.price %></p>
 <small><%= @guitar.description %></small>
